<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="2"
    android:background="#000000">

    <TableRow>

        <TextView
            android:id="@+id/t1"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textColor="@drawable/text"
            android:gravity="center"
            android:text="@string/open" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/ctrl_o"
            android:gravity="end"
            android:textColor="@drawable/text" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/t3"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/save"
            android:gravity="center"
            android:textColor="@drawable/text" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/ctrl_s"
            android:gravity="end"
            android:textColor="@drawable/text" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/t5"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/save_as"
            android:gravity="center"
            android:textColor="@drawable/text" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/ctrl_shift_s"
            android:textColor="@drawable/text" />
    </TableRow>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#c2b9b9" />
    <TableRow>

        <TextView
            android:id="@+id/t7"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/x_import"
            android:textColor="@drawable/text" />


    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/t8"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/x_expot"
            android:textColor="@drawable/text" />

        <TextView
            android:id="@+id/t9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/ctrl_shift_s"
            android:textColor="@drawable/text" />
    </TableRow>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#c2b9b9" />
    <TableRow>

    <TextView
        android:id="@+id/t10"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:text="@string/quit"
        android:gravity="center"
        android:textColor="@drawable/text"/>
    </TableRow>
</TableLayout>
